--- a/src/components/AboutUsSection/AboutUsSection.scss
+++ b/src/components/AboutUsSection/AboutUsSection.scss
@@ -2,6 +2,9 @@ $yellow_color: #ffce6f;
 $blue_color: #247ba8;
 
 .AboutUs {
+  font-family: "Days One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   padding: 90px 20px;
   text-align: center;
 
@@ -21,9 +24,9 @@ $blue_color: #247ba8;
         width: 100%;
         max-width: 290px;
         height: auto;
-        border: 2px solid $yellow_color; /* Внешняя рамка */
-        box-shadow: 0 0 0 3px $blue_color; /* Внешний бордер (внутренний) */
-        border-radius: 10px;
+        border: 2px solid $yellow_color;
+        box-shadow: 0 0 0 3px $blue_color;
+        border-radius: 24px;
         margin: 18px;
         object-fit: cover;
         transition: transform 0.3s ease;
