--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,8 +1,8 @@
 $main_color: #247ba8;
 
 .header {
-  font-family: "Poppins";
-  font-weight: 100;
+  font-family: "Days One", sans-serif;
+  font-weight: 400;
   font-style: normal;
   position: fixed;
   top: 0;
