--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 $sky_blue: #90cdea;
 
 body {
-  font-family: "Poppins";
+  font-family: "Days One", sans-serif;
   font-weight: 400;
   font-style: normal;
   background-color: white; // Светло-голубой цвет фона
