--- a/src/components/AboutUsSection/AboutUsSection.scss
+++ b/src/components/AboutUsSection/AboutUsSection.scss
@@ -7,6 +7,7 @@ $blue_color: #247ba8;
   font-style: normal;
   padding: 90px 20px;
   text-align: center;
+  
 
   .AboutUs-content {
     max-width: 1200px;
@@ -14,6 +15,11 @@ $blue_color: #247ba8;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    h2 {
+      margin-bottom: 24px;
+      font-size: 2em;
+    }
 
     .images {
       display: flex;
