--- a/src/components/OurPetsSection/OurPetsSection.scss
+++ b/src/components/OurPetsSection/OurPetsSection.scss
@@ -4,19 +4,70 @@ $main_color: #247ba8;
   font-family: "Days One", sans-serif;
   font-weight: 400;
   font-style: normal;
+  position: relative;
   padding: 5px 10px;
   text-align: center;
+  
 
   h2 {
     margin-bottom: 24px;
     font-size: 2em;
   }
 
-  .buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+  .slick-slider {
     position: relative;
+    max-width: 100%;
+    margin-bottom: 60px; // Отступ для кнопки и точек
+  }
+
+  .slick-slide {
+    margin-left: 5px;
+  }
+
+  .pet-card {
+    background: #fff;
+    border-radius: 18px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    height: 600px; // Задаем фиксированную высоту для всех карточек
+
+    .pet-image {
+      img {
+        width: 100%;
+        height: 374px;
+        object-fit: cover;
+        border-bottom: 1px solid #f0f0f0;
+      }
+    }
+
+    .pet-info {
+      flex-grow: 1; // Позволяет описанию занимать оставшееся место
+      padding: 20px;
+      overflow: hidden;
+
+      h3 {
+        margin: 0;
+        font-size: 1.5em;
+        color: $main_color;
+      }
+
+      p {
+        margin: 14px 0;
+        font-size: 1em;
+        color: black;
+      }
+    }
+  }
+
+  .buttons {
+    position: absolute;
+    bottom: -40px; // Немного выше, чтобы кнопка оказалась под точками
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 1;
 
     .catalogueButton {
@@ -37,54 +88,12 @@ $main_color: #247ba8;
     }
   }
 
-  .slick-slide {
-    margin-bottom: 20px;
-  }
-
-  .pet-card {
-    background: #fff;
-    border-radius: 18px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    height: 600px;
-
-    .pet-image {
-      img {
-        width: 100%;
-        height: 374px;
-        object-fit: cover;
-        border-bottom: 1px solid #f0f0f0;
-      }
-    }
-
-    .pet-info {
-        flex-grow: 1; // Позволяет описанию занимать оставшееся место
-      padding: 20px;
-      overflow: hidden;
-
-      h3 {
-        margin: 0;
-        font-size: 1.5em;
-        color: $main_color;
-      }
-
-      p {
-        margin: 14px 0;
-        font-size: 1em;
-        color: black;
-      }
-    }
-  }
-
   .slick-dots {
-    position: relative; // Относительное позиционирование
-    bottom: 0; // Позиционирует точечки под карточками
-    margin-top: 10px; // Отступ сверху для создания пространства между карточками и точечками
-    margin-top: 10px; // Отступ сверху для точек
-    margin-bottom: 20px; // Отступ снизу для точек
+    position: absolute;
+    bottom: -40px; // Под карточками
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
 
     li {
       margin: 0 4px;
@@ -102,5 +111,9 @@ $main_color: #247ba8;
         opacity: 1; // Убираем прозрачность
       }
     }
+  }
+
+  .slick-list {
+    height: 635px;
   }
 }
