--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -83,9 +83,9 @@ $white_color: #ffffff;
 
     img {
       border: 4px solid $main_color;
-      box-shadow: 0 0 0 4px $white_color;
+      box-shadow: 0 0 0 4px $yellow_color;
       max-width: 320px;
-      height: 348px;
+      height: 340px;
       border-radius: 14px;
     }
   }
