--- a/src/components/AboutUsSection/AboutUsSection.scss
+++ b/src/components/AboutUsSection/AboutUsSection.scss
@@ -28,7 +28,7 @@ $blue_color: #247ba8;
 
       img {
         width: 100%;
-        max-width: 290px;
+        max-width: 344px;
         height: auto;
         border: 2px solid $yellow_color;
         box-shadow: 0 0 0 3px $blue_color;
@@ -69,6 +69,7 @@ $blue_color: #247ba8;
         margin: 40px;
         background-color: $yellow_color;
         padding: 15px;
+        border-radius: 24px;
         h3 {
           color: $blue_color;
           font-size: 54px;
