--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,67 +2,82 @@ $main_color: #247ba8;
 $yellow_color: #ffce6f;
 $white_color: #ffffff;
 
+
 .footer {
   box-sizing: border-box;
   font-family: "Days One", sans-serif;
   font-weight: 400;
   font-style: normal;
   background-color: $main_color;
-  margin-top: 58px;
-  padding: 44px;
+  padding: 44px 10%;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   width: 100%;
   position: absolute;
   left: 0;
+  margin-top: 38px;
 
   h3 {
     margin-top: 48px;
     position: absolute;
     top: 0; 
     left: 50%;
-    transform: translate(-50%, -100%); /* коррекция смещения для центрирования */
+    transform: translate(-50%, -100%);
     color: $white_color;
     font-size: 1.8em;
   }
 
   .footer-content {
     display: flex;
-    justify-content:space-between;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
     width: 100%;
     margin-top: 28px;
   }
 
-  .footer-map {
+  .footer-map,
+  .footer-contacts,
+  .footer-qr {
     flex: 1;
-    margin-right: 8px;
+    margin: 0 10px; /* Уменьшение промежутков между блоками */
+  }
 
+  .footer-map {
     iframe {
-      border-radius: 28px;
+      border-radius: 38px;
       height: 348px;
-      width: 628px;
+      width: 100%; /* Автоматическая подстройка под размеры блока */
     }
   }
 
-
   .footer-contacts {
-    flex: 1;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: relative;
 
+    h3 {
+      margin-top: -15px;
+      color: $white_color;
+      font-size: 1.8em;
+    }
+
     p {
-      margin: 28px 0px;
+      margin: 24px 0; /* Уменьшение отступов */
       font-size: 1.2em;
       color: white;
     }
 
     .social-icons {
-      margin-top: 28px;
+      margin-top: 15px;
+      display: flex;
+      justify-content: center;
+      gap: 14px;
       a {
-        padding: 14px;
-        margin: 0 14px;
+        margin: 0 12px;
         font-size: 1.5em;
         color: white;
         transition: color 0.3s;
@@ -75,7 +90,6 @@ $white_color: #ffffff;
   }
 
   .footer-qr {
-    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -84,8 +98,8 @@ $white_color: #ffffff;
     img {
       border: 4px solid $main_color;
       box-shadow: 0 0 0 4px $white_color;
-      max-width: 320px;
-      height: 320px;
+      max-width: 240px; /* Уменьшение размера */
+      height: 240px;
       border-radius: 14px;
     }
   }
