--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,7 +2,6 @@ $main_color: #247ba8;
 $yellow_color: #ffce6f;
 $white_color: #ffffff;
 
-
 .footer {
   box-sizing: border-box;
   font-family: "Days One", sans-serif;
@@ -21,7 +20,7 @@ $white_color: #ffffff;
   h3 {
     margin-top: 48px;
     position: absolute;
-    top: 0; 
+    top: 0;
     left: 50%;
     transform: translate(-50%, -100%);
     color: $white_color;
@@ -66,7 +65,7 @@ $white_color: #ffffff;
     }
 
     p {
-      margin: 24px 0; /* Уменьшение отступов */
+      margin: 36px 0; /* Уменьшение отступов */
       font-size: 1.2em;
       color: white;
     }
@@ -96,11 +95,30 @@ $white_color: #ffffff;
     align-items: center;
 
     img {
-      border: 4px solid $main_color;
-      box-shadow: 0 0 0 4px $white_color;
+      // border: 4px solid $main_color;
+      // box-shadow: 0 0 0 4px $white_color;
       max-width: 240px; /* Уменьшение размера */
-      height: 240px;
+      height: 230px;
       border-radius: 14px;
+    }
+
+    .help-button {
+      margin-top: 38px;
+      background-color: #247ba8;
+      color: $white_color;
+      border: none;
+      padding: 14px 28px; /* Увеличиваем отступы */
+      font-size: 1.1em; /* Увеличиваем размер шрифта */
+      border: 3px solid $white_color;
+      border-radius: 5px;
+      cursor: pointer;
+      transition:
+        background-color 0.3s,
+        transform 0.3s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
 }
