--- a/src/components/AboutUsSection/AboutUsSection.scss
+++ b/src/components/AboutUsSection/AboutUsSection.scss
@@ -1,5 +1,6 @@
 $yellow_color: #ffce6f;
 $blue_color: #247ba8;
+$light_black: #333333;
 
 .AboutUs {
   font-family: "Days One", sans-serif;
@@ -17,6 +18,7 @@ $blue_color: #247ba8;
     align-items: center;
 
     h2 {
+      color: $light_black;
       margin-bottom: 24px;
       font-size: 2em;
     }
@@ -58,7 +60,7 @@ $blue_color: #247ba8;
       margin-top: 30px;
 
       p {
-        color: black;
+        color: $light_black;
         font-size: 16px;
         line-height: 1.5;
         max-width: 800px;
